WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51143
Loading webkit.org over and over is slower in WebKit2 than WebKit1, looks like page is not cached
https://bugs.webkit.org/show_bug.cgi?id=51143
Summary
Loading webkit.org over and over is slower in WebKit2 than WebKit1, looks lik...
Adam Roben (:aroben)
Reported
2010-12-15 15:23:07 PST
To reproduce: 1. Go to
http://webkit.org/
2. Repeat You can see the page's resources load each time you go to the site. If you compare with WebKit1, the page loads instantly the second and subsequent times.
Attachments
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-12-15 15:23:24 PST
Sam and Anders say we need to implement WebFrameLoaderClient::canCachePage.
Adam Roben (:aroben)
Comment 2
2010-12-15 15:23:53 PST
<
rdar://problem/8774683
>
Sam Weinig
Comment 3
2010-12-15 15:55:47 PST
Fixed in
r74157
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug