Loading webkit.org over and over is slower in WebKit2 than WebKit1, looks like page is not cached <rdar://problem/8774683> https://bugs.webkit.org/show_bug.cgi?id=51143

Reviewed by Brady Eidson.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::canCachePage): Return true as long as we
are not a custom representation (eg. a PDF).
(WebKit::WebFrameLoaderClient::shouldCacheResponse): Always return true.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences): Enable the page cache.



Canonical link: https://commits.webkit.org/64504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74157 268f45cc-cd09-0410-ab3c-d52691b4dbfc